CICD update for macOS, Windows (64 bit only), & MinGW on Windows (#1185)
* Update ci_tests.yaml from dlite/nameloCmaS master branch

* Fix race condition in CI tests

* Fix bug where url protocol:// is replaced with protocol:\\ on Windows

* Align docstring helper to match Python 3.13 change

* Remove unneeded package

* Remove unneeded package which can't install on MinGW

* Align docstring to match Python 3.13 behavior

* Correct path for MinGW when a venv is detected

* Fix "too many arguments to function" error on MinGW & removes preprocessor

* Exclude if None

* Fix typo for variable

* Remove -arch from Python3_LDFLAGS on macOS

* RPath global config

* Add RPath config

* Fix error while loading shared libraries: libpython3.10.so.1.0

* Skip unloading plugins on macOS for now due to dangling pointer - needs review of plugin_unload

* Remove unused package

* Enables building Wheels for macOS and MinGW

* Fix order of configure_file / add_subdirectory. Configure file was processed before the variables were assigned (noticed on macOS when HAVE_SETENV was not properly assigned)

* Add RPath config

* Residual double file from early macOS changes that wasnt removed. Appears to be affecting Windows compile & variable sizes of SIZEOF_SIZE_T

* Removed redundant custom command with the now correct RPath settings

* Ensure RPATHS updated correctly

* None.lib issue fixed upstream

* Revert

* Fix ex4

* Fix examples

* Fix test paths

* Tidy test environment variables

* Export all Windows symbols by default

* HAVE_SETENV is set by header file, remove preprocessor preventing setenv definition

* Fix setenv to align with the spec in 'man getenv'

* Move setenv to own file to avoid including config.h where config-path.h required

* Tidy up multiplatform path operations

* None.lib issue fixed upstream

* Replace depreciated function

* Set path relative to source

* setenv definition to be in dlite-utils only

* Add missing return type to declaration

* Help MinGW fi

--- a/.github/workflows/cd_docs.yml
+++ b/.github/workflows/cd_docs.yml
@@ -31,10 +31,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Python 3.10
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.13.5"
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
@@ -58,7 +58,6 @@ jobs:
       - name: Install Python dependencies
         run: |
           pip install --upgrade pip
-          pip install -U setuptools wheel
           pip install -r requirements.txt -r requirements_doc.txt -r requirements_dev.txt
 
       - name: Available version of installed programs
