--- a/bindings/fortran/tests/CMakeLists.txt
+++ b/bindings/fortran/tests/CMakeLists.txt
@@ -50,14 +50,31 @@ foreach(test ${tests})
     ${CMAKE_CURRENT_BINARY_DIR}
     )
 
+  # TEST RPATH/ RUNPATH
+  # ===================
+  # 
+  # These tests will be run from the Build directory only.
+  # Set absolute RPATHS to the other libraries.
+  # TODO: Change all paths to generators e.g. for dlite, dlite-utils etc as easier to maintain
+
+  set_target_properties(${test} PROPERTIES
+    BUILD_WITH_INSTALL_RPATH FALSE
+    BUILD_RPATH "${dlite_BINARY_DIR}/src;${dlite_BINARY_DIR}/src/utils;$<TARGET_FILE_DIR:dlite-fortran>"
+    )
+
   set(name ${test}-f90)
   add_test(
     NAME ${name}
     COMMAND ${RUNNER} ${test}
     )
 
+if(WIN32 AND NOT MINGW)
   set_property(TEST ${name} PROPERTY
-    ENVIRONMENT "PATH=${dlite_PATH_NATIVE}")
+    ENVIRONMENT_MODIFICATION "PATH=path_list_prepend:$<JOIN:${dlite_PATH_NATIVE},\\\;>")
+else()
+  set_property(TEST ${name} PROPERTY
+    ENVIRONMENT_MODIFICATION "PATH=path_list_prepend:${dlite_PATH_UNIX}")
+endif()
   set_property(TEST ${name} APPEND PROPERTY
     ENVIRONMENT "WINEPATH=${dlite_WINEPATH_NATIVE}")
   set_property(TEST ${name} APPEND PROPERTY
@@ -66,5 +83,7 @@ foreach(test ${tests})
     ENVIRONMENT "LD_LIBRARY_PATH=${dlite_LD_LIBRARY_PATH_NATIVE}")
   set_property(TEST ${name} APPEND PROPERTY
     ENVIRONMENT "DLITE_USE_BUILD_ROOT=YES")
+  set_property(TEST ${name} APPEND PROPERTY
+    ENVIRONMENT "DLITE_STORAGES=*.json")
 
 endforeach()
