--- a/requirements_full.txt
+++ b/requirements_full.txt
@@ -18,7 +18,7 @@ redis>=5.0,<7
 minio>=6.0,<8
 pymongo>=4.4.0,<5
 urllib3>=1.0.0,<3
-#psycopg2>=2,<3
+psycopg>=2,<4
 
 # Utilities
 # Bug in pydantic 2.10.0, 2.10.1: See https://github.com/pydantic/pydantic/issues/9898
@@ -26,13 +26,13 @@ annotated-types>=0.5.0,<0.8.0
 pydantic>=1.10.0,!=2.10.0,!=2.10.1,<2.11.6
 pydantic-core>=0.42,<2.34.2
 typing_extensions>=4.1,<5; python_version<'3.9'
+scikit-image>=0.19,<1
 
 # Requirements for running tests
 mongomock==4.3.0
 
 # For TEM demo
 ##matplotlib>=3,<4
-##scikit-image>=0.19,<1
 ##ncempy>=1.10,<2
 ##h5py>=3.9,<4
 #oteapi-dlite>=0.1.5,<1
