Missing metadata dimensions, properties or relations will now be assumed to be an array of length zero.

--- a/bindings/python/scripts/CMakeLists.txt
+++ b/bindings/python/scripts/CMakeLists.txt
@@ -79,7 +79,7 @@ test_success(
 )
 
 # The "dimensions" keyword is required
-test_failure(
+test_success(
   dlite-validate-no-dimensions
   dlite-validate NoDimensions.json
 )
