Added python-pyarrow to dependencies

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -68,6 +68,7 @@ jobs:
             python-pydantic-core:p
             python-rdflib:p
             python-yaml:p
+            python-pyarrow:p
             python-scikit-image:p
             cmake:p
             gcc:p
