--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -172,7 +172,7 @@ jobs:
             python3 -m pip install --upgrade pip
             python3 -m pip --version
 
-            python3 -m pip install -r requirements.txt -r requirements_dev.txt
+            python3 -m pip install -r requirements.txt -r requirements_dev.txt -r requirements_mappings.txt
             python3 -m pip install -r requirements_full.txt --no-deps
 
           fi
