--- a/requirements_full.txt
+++ b/requirements_full.txt
@@ -11,8 +11,11 @@ PyYAML>=5.4.1,<7
 pandas>=1.2,<2.4
 pyarrow>=14.0,<21.0
 openpyxl>=3.0.9,<3.2
+isodate>=0.6,<1
 jinja2>=3.0,<4
 paramiko>=3.0.0,<3.5.2
+python-dateutil>=2.0<3
+pytz>=2024,<2026
 requests>=2.10,<3
 redis>=5.0,<7
 minio>=6.0,<8
