installed pyarrow with pacboy for mingw

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -61,6 +61,7 @@ jobs:
             python-argon2_cffi:p
             python-cffi:p
             python-numpy:p
+            python-pyarrow:p
             python-pandas:p
             python-paramiko:p
             python-pip:p
