--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -275,7 +275,7 @@ jobs:
           then
             source ../venv/bin/activate
           fi
-          ctest --build-config Release --output-on-failure -V
+          ctest --build-config Release --output-on-failure
 
 
       - name: Test with all behavior changes disabled
@@ -287,7 +287,7 @@ jobs:
           then
             source ../venv/bin/activate
           fi
-          ctest --build-config Release --output-on-failure -V
+          ctest --build-config Release --output-on-failure
 
 
       - name: Test with all behavior changes enabled
@@ -299,7 +299,7 @@ jobs:
           then
             source ../venv/bin/activate
           fi
-          ctest --build-config Release --output-on-failure -V
+          ctest --build-config Release --output-on-failure
 
 
       - name: Build ${{ matrix.os }} wheel
