--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -61,7 +61,6 @@ jobs:
             python-argon2_cffi:p
             python-cffi:p
             python-numpy:p
-            python-numexpr:p
             python-pyarrow:p
             python-pandas:p
             python-paramiko:p
@@ -76,6 +75,7 @@ jobs:
             swig:p
             libxml2:p
             libxslt:p
+            #python-numexpr:p
 
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -142,6 +142,7 @@ jobs:
 
             # Install pyarrow before main requirements to avoid building from source
             #python3 -m pip install pyarrow
+            python3 -m pip install --only-binary=:all: numexpr==2.8.4
             python3 -m pip install blosc2 msgpack ndindex
 
             python3 -m pip install -c requirements_dev.txt setuptools wheel
