--- a/requirements_full.txt
+++ b/requirements_full.txt
@@ -5,22 +5,23 @@
 -r requirements_mappings.txt
 
 # Plugins
-PyYAML>=5.4.1,<7
-pandas>=1.2,<2.4
-pyarrow>=14.0,<21.0
-openpyxl>=3.0.9,<3.2
 isodate>=0.6,<1
 jinja2>=3.0,<4
+minio>=6.0,<8
+openpyxl>=3.0.9,<3.2
+pandas>=1.2,<2.4
 paramiko>=3.0.0,<3.5.2
+#psycopg2>=2,<3
+pyarrow>=14.0,<21.0
+pymongo>=4.4.0,<5
 python-dateutil>=2.0,<3
 pytz>=2024,<2026
-requests>=2.10,<3
+PyYAML>=5.4.1,<7r
 redis>=5.0,<7
-minio>=6.0,<8
-pymongo>=4.4.0,<5
+requests>=2.10,<3
 tables>3.0.0,<4
 urllib3>=1.0.0,<3
-#psycopg2>=2,<3
+
 
 # Utilities
 # Bug in pydantic 2.10.0, 2.10.1: See https://github.com/pydantic/pydantic/issues/9898
