Replaced old psycopg2 package with psycopg (#1192)
The old psycopg2 package has some issues resulting in sporadic segmentation faults. Replacing it with psycopg will hopefully fix that issue.

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -68,6 +68,9 @@ jobs:
             python-pyarrow:p
             python-paramiko:p
             python-pydantic-core:p
+            python-rdflib:p
+            python-yaml:p
+            python-scikit-image:p
             cmake:p
             gcc:p
             hdf5:p
